--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -31,10 +31,10 @@
 }
 
 .list-main {
-    padding: 0 20rpx;
+    padding: 20rpx 20rpx 0;
 }
 .item {
-    margin-top: 20rpx;
+    margin-bottom: 20rpx;
     font-size: 0;
     background: #fff;
 }
